--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -46,6 +46,9 @@
 *,::before,::after{
     box-sizing: border-box;
 }
+::-webkit-scrollbar {
+    width: 0;
+}
 html{
     scroll-behavior: smooth;
 }
@@ -510,6 +513,85 @@ img{
     .bd-grid{
         margin-left: auto;
         margin-right: auto;
+    }
+}
+
+.modal {
+    // display: none;
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(10px);
+    z-index: 1020;
+    overflow: auto;
+
+    .modal__content {
+        background-color: rgba(78, 153, 234, 0.7);
+        backdrop-filter: blur(8px);
+        width: 80%;
+        min-height: 80vh;
+        border-radius: 8px;
+        margin-top: 6%;
+        margin-left: auto;
+        margin-right: auto;
+        position: relative;
+        .modal__close {
+            position: absolute;
+            top: 0;
+            right: 0;
+            padding: 5px;
+            i {
+                font-size: 28px;
+                color: var(--dark-color);
+                &:hover {
+                    transform: translateY(-3px);
+                    transition: all .25s ease;
+                }
+            }
+        }
+        .modal__banner {
+            background-color: var(--white-color);
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            img {
+                width: 100% !important;
+                height: 300px !important;
+                object-fit: contain !important;
+            }
+        }
+        .modal__description {
+            padding: 10px 20px;
+            color: var(--white-color);
+            font-family: var(--body-font);
+            font-size: var(--small-font-size);
+            h3 {
+                color: var(--white-color);
+                font-family: var(--body-font);
+            }
+            .modal__text {
+                text-align: justify;
+            }
+        }
+        .modal__footer {
+            padding-right: 20px;
+            a {
+                i {
+                    margin-right: 3px;
+                }
+                color: var(--white-color);
+                font-family: var(--body-font);
+                font-size: var(--small-font-size);
+                display: flex;
+                justify-content: flex-end;
+                align-items: center;
+                &:hover {
+                    color: var(--dark-color);
+                }
+            }
+        }
     }
 }
 
