--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -535,6 +535,7 @@ img{
         min-height: 80vh;
         border-radius: 8px;
         margin-top: 6%;
+        margin-bottom: 6%;
         margin-left: auto;
         margin-right: auto;
         position: relative;
