--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,6 +345,19 @@ img {
 .portfolio__img {
   position: relative;
   overflow: hidden;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #f4f4f4;
+  border-radius: 6px;
+  padding: 10px;
 }
 
 .portfolio__img img {
