--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -302,6 +302,14 @@ img{
         position: relative;
         overflow: hidden;
         
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #f4f4f4;
+        border-radius: 6px;
+        padding: 10px;
+        
         & img{
             border-radius: .5rem;
         }
