--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -78,6 +78,12 @@ img{
     display: block;
 }
 
+@mixin flexCenter {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
 /*===== CLASS CSS ===== */
 .section{
     padding: 3rem 0;
@@ -335,6 +341,11 @@ img{
 
         &-name{
             color: var(--dark-color);
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
     }
 }
@@ -540,7 +551,7 @@ img{
         background-color: rgba(78, 153, 234, 0.7);
         backdrop-filter: blur(8px);
         width: 80%;
-        min-height: 80vh;
+        // min-height: 80vh;
         border-radius: 8px;
         margin-top: 6%;
         margin-bottom: 6%;
@@ -565,9 +576,12 @@ img{
             background-color: var(--white-color);
             border-top-left-radius: 8px;
             border-top-right-radius: 8px;
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             img {
-                width: 100% !important;
-                height: 300px !important;
+                max-width: 300px !important;
                 object-fit: contain !important;
             }
         }
@@ -583,9 +597,18 @@ img{
             .modal__text {
                 text-align: justify;
             }
+            a {
+                color: var(--white-color);
+                text-decoration: underline;
+                &:hover {
+                    color: var(--dark-color);
+                }
+            }
         }
         .modal__footer {
             padding-right: 20px;
+            padding-bottom: 10px;
+            @include flexCenter();
             a {
                 i {
                     margin-right: 3px;
@@ -593,9 +616,8 @@ img{
                 color: var(--white-color);
                 font-family: var(--body-font);
                 font-size: var(--small-font-size);
-                display: flex;
-                justify-content: flex-end;
-                align-items: center;
+                margin: 0 5px;
+                @include flexCenter();
                 &:hover {
                     color: var(--dark-color);
                 }
