--- a/assets-2/css/styles.css
+++ b/assets-2/css/styles.css
@@ -215,6 +215,9 @@ img {
 .nav__link:hover {
     color: var(--first-color);
 }
+.nav__link .bx {
+    margin-bottom: var(--mb-0-25);
+}
 .nav__icon {
     font-size: 1.2rem;
     display: none;
@@ -657,13 +660,13 @@ body.dark-theme ._steps:nth-child(even) ._content::before {
 .services__content {
     position: relative;
     background-color: var(--container-color);
-    padding: 10px;
+    padding: 3rem 2rem 1rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rgba(0,0,0,.15);
-    transform: .3s;
+    transition: .3s;
 }
 .services__content:hover {
-    box-shadow: 0 4px 0px rgba(0,0,0,.15);
+    box-shadow: 0 4px 4px rgba(0,0,0,.15);
 }
 .services__icon {
     font-size: 1.5rem;
@@ -709,6 +712,7 @@ body.dark-theme ._steps:nth-child(even) ._content::before {
 }
 .services__modal-service {
     display: flex;
+    align-items: center;
 }
 .services__modal-title {
     font-size: var(--h3-font-size);
@@ -941,7 +945,7 @@ body.dark-theme .footer__copy {
     bottom: -20%;
     background-color: var(--first-color);
     opacity: .8;
-    padding: 0 .3rem;
+    padding: 0.3rem;
     border-radius: .4rem;
     z-index: var(--z-tooltip);
     transition: .4s;
@@ -952,6 +956,7 @@ body.dark-theme .footer__copy {
 .scrollup__icon {
     font-size: 1.5rem;
     color: #FFF;
+    vertical-align: bottom;
 }
 /* Show scroll */
 .show-scroll {
